NBNP-271 Fix home page search input/submit button alignment

--- a/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
+++ b/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
@@ -58,7 +58,7 @@ a#tab-about:before {
     width: 25%;
 }
 .tab-pane div.form-type-textfield + span button {
-    margin-top: 27px;
+    margin-top: 2.5rem;
 }
 
 @media (max-width: 990px) {
